# practice-blog-api

./: MQClient.py  README.md  docker-compose.yaml  mq_receiver.py  mq_rpc_client.py  mq_rpc_server.py  mq_sender.py  pyproject.toml  utils.py
api/: base.py  crud.py  database.py  models.py  schemas.py  views.py
sql_app/: crud.py  main.py  models.py  schemas.py  views.py
