[tool.poetry]
name = "practice-blog-api"
version = "0.1.0"
description = ""
authors = ["qlqldldh"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.3.23"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
